@@ -21,6 +21,8 @@ Changes in 2.18.3 -- ?
     cancel the closing.
   - Tabbar and document list show in the document icon whether the last
     engraving was successful
+  - Score Wizard:
+    - add C-Melody Sax (#810)
 * Bug fixes:
   - fix #793 Command autocompletion doesn’t work in figuremode
 * Translations:
